<resources>
    <string name="app_name">SosCubs</string>
    <string name="ffSansSerifMedium">sans-serif-medium</string>
    <string name="admission_counselling">ADMISSION COUNSELLING</string>

    <string name="title_activity_dashboard">SOS Cubs Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_inbox">Inbox</string>
    <string name="menu_alert">Alert</string>
    <string name="menu_help">Help</string>
    <string name="menu_event">Events</string>
    <string name="menu_logout">Logout</string>

    <string name="positive_popup_default">Success</string>
    <string name="failureStorageErr">Please give storage permission. To Enjoy uninterrupted App Functionality.</string>
    <string name="failureSSApiVerErr">Please Try again, Failed to connect to the Server.</string>
    <string name="failureNoInternetErr">No Internet Connection. Please connect to active internet connection.</string>
    <string name="failureUpdateApiVerErr">Please Update. If you see [Update Button] then Update. Else uninstall previous
        app and install again from play store.
    </string>

</resources>
