<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--    <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_gallery" />
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_slideshow" />
            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_tools" />
        </group>

        <item android:title="Communicate">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_send" />
            </menu>
        </item>-->


    <item
        android:id="@+id/nav_inbox"
        android:icon="@drawable/ic_inbox_grid"
        android:title="@string/menu_inbox" />
    <item
        android:id="@+id/nav_alert"
        android:icon="@drawable/ic_alert_grid"
        android:title="@string/menu_alert" />
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help_grid"
        android:title="@string/menu_help" />
    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_event_grid"
        android:title="@string/menu_event" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_logout" />

</menu>
